--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2364,3 +2364,15 @@ button,
       margin-top: 0;
   }
 }
+.responsive-iframe {
+  width: 100%;
+  height: 80vh; /* Adjust the height as needed */
+  border: none;
+  overflow: auto; /* Ensure the iframe content is scrollable */
+}
+
+@media (max-width: 600px) {
+  .responsive-iframe {
+    height: 60vh; /* Adjust height for smaller screens if needed */
+  }
+}
