--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2368,11 +2368,26 @@ button,
   width: 100%;
   height: 80vh; /* Adjust the height as needed */
   border: none;
-  overflow: auto; /* Ensure the iframe content is scrollable */
 }
 
 @media (max-width: 600px) {
   .responsive-iframe {
-    height: 60vh; /* Adjust height for smaller screens if needed */
+      height: 60vh; /* Adjust height for smaller screens if needed */
   }
+}
+
+/* Ensure the iframe content is scrollable */
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+iframe {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: none;
+  overflow: auto;
 }
