--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2355,30 +2355,47 @@ button,
 .responsive-image {
   width: 100%;
   height: auto;
-  margin-top: 10px;
-  object-fit: cover;
-  object-position: top; /* This ensures the image displays from the top */
+  margin-top: 10px; /* Ensure the margin-top value is in pixels */
 }
 
 @media (max-width: 600px) {
   .responsive-image {
-    width: 100%;
-    height: 300px; /* Set a fixed height to better control the visible area */
-    margin-top: 0;
-    object-fit: cover;
-    object-position: top; /* Display the top portion of the image */
+    width: auto; /* Use the natural width of the image */
+    max-width: 100%; /* Ensure the image doesn't exceed the container width */
+    height: auto;
+    margin-top: 0; /* Remove the margin-top for mobile */
+    object-position: top; /* Start displaying from the top of the image */
+  }
+}
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.iframe-container {
+  width: 100%;
+  height: 80vh; /* Adjust the height as needed */
+  overflow: auto; /* Ensure the container is scrollable */
+}
+
+@media (max-width: 1024px) {
+  /* For iPads and smaller devices */
+  .iframe-container {
+      height: 70vh; /* Adjust height for iPads */
+  }
+}
+
+@media (max-width: 600px) {
+  /* For iPhones and smaller devices */
+  .iframe-container {
+      height: 40vh; /* Adjust height for iPhones */
   }
 }
 
 .responsive-iframe {
   width: 100%;
-  height: 80vh; /* Adjust the height as needed */
+  height: 100%;
   border: none;
-  overflow: auto; /* Ensure the iframe content is scrollable */
-}
-
-@media (max-width: 600px) {
-  .responsive-iframe {
-    height: 60vh; /* Adjust height for smaller screens if needed */
-  }
 }
