--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2364,6 +2364,7 @@ button,
     max-width: 100%; /* Ensure the image doesn't exceed the container width */
     height: auto;
     margin-top: 0; /* Remove the margin-top for mobile */
+    object-fit: contain; /* Ensure the image covers the container */
     object-position: top; /* Start displaying from the top of the image */
   }
 }
