--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2362,7 +2362,7 @@ button,
   .responsive-image {
     width: auto; /* Use the natural width of the image */
     max-width: 100%; /* Ensure the image doesn't exceed the container width */
-    height: auto;
+    height: 150%;
     margin-top: 0; /* Remove the margin-top for mobile */
     object-fit: contain; /* Ensure the image covers the container */
     object-position: top; /* Start displaying from the top of the image */
