--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2363,7 +2363,7 @@ button,
 @media (max-width: 600px) {
   .responsive-image {
     width: 50%; /* Make the image smaller on mobile devices */
-    height: auto; /* Maintain aspect ratio */
+    height: 10%; /* Maintain aspect ratio */
   }
 }
 .responsive-iframe {
