--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2365,6 +2365,7 @@ button,
   .responsive-image {
     width: 50%; /* Make the image smaller on mobile devices */
     height: 50%; /* Maintain aspect ratio */
+    margin-left: 20px;
   }
 }
 .responsive-iframe {
