--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2358,7 +2358,17 @@ button,
   margin-top: 10px;
   object-fit: cover;
   object-position: top center; 
-  margin-left: 20px;/* Ensure the image displays from the top */
+  margin-left: 20px; /* Ensure the image displays from the top */
+}
+
+@media (max-width: 1024px) {
+  .responsive-image {
+    width: 50%; /* Adjust the image size for iPad devices */
+    height: auto; /* Maintain aspect ratio */
+    display: block; /* Make the image a block element */
+    margin: 0 auto; /* Center the image horizontally */
+    margin-bottom: 20px; /* Add space below the image */
+  }
 }
 
 @media (max-width: 600px) {
@@ -2367,8 +2377,10 @@ button,
     height: 50%; /* Maintain aspect ratio */
     display: block; /* Make the image a block element */
     margin: 0 auto; /* Center the image horizontally */
+    margin-bottom: 20px; /* Add space below the image */
   }
 }
+
 .responsive-iframe {
   width: 100%;
   height: 80vh; /* Adjust the height as needed */
